force-app/main/default/objects/Case_Reporting_Field__c/Case_Reporting_Field__c.object-meta.xml
<CustomObject>
    <label>Case Reporting Field</label>
    <nameField>
        <displayFormat>CRF-{0000}</displayFormat>
        <label>Case Reporting Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Reporting Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>