force-app/main/default/objects/Case_Reporting_Field__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Case to link the Reporting Field Record to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Reporting Fields</relationshipLabel>
    <relationshipName>Case_Reporting_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>