force-app/main/default/objects/Case_Reporting_Field__c/fields/Case_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Opened__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Records the Last Opened Date Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Last Opened</label>
    <type>DateTime</type>
</CustomField>