force-app/main/default/objects/Case_Reporting_Field__c/fields/IDR_Response_Time_RG271__c.field-meta.xml
<CustomField>
    <fullName>IDR_Response_Time_RG271__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Converts the MS Time to Days</description>
    <formula>(
    IF(
        ISBLANK( Case_Last_Opened_RG271__c ), 0, 
        (
            ( NOW() - Case_Last_Opened_RG271__c ) * 
            1000 * 60 * 60 * 24
        )
    )
    + IDR_Response_Time_RG271_MS__c
) / (1000 * 60 * 60 * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDR Response Time (RG271)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>