force-app/main/default/objects/Case_Reporting_Field__c/fields/IDR_Response_Time_RG271_MS__c.field-meta.xml
<CustomField>
    <fullName>IDR_Response_Time_RG271_MS__c</fullName>
    <label>IDR Response Time (RG271) MS</label>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Records the time in MilliSeconds</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>