force-app/main/default/objects/Case_Reporting_Field__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula to show Status + Icon on ListViews and Standard Related Lists.</description>
    <formula>CASE( TEXT( Sub_Status__c ) ,
    &quot;Failed&quot;, IMAGE(&quot;/resource/statusicon/statusicon/failed_url.png&quot;,
 &quot;Failed&quot;, 20, 20) + &quot; &quot; + TEXT(Status) ,
    &quot;Success&quot;, IMAGE(&quot;/resource/statusicon/statusicon/success_url.png&quot;,
 &quot;Success&quot;, 20, 20) + &quot; &quot; + TEXT(Status),
    &quot;Processing&quot;, IMAGE(&quot;/resource/statusicon/statusicon/processing_url.png&quot;,
 &quot;Processing&quot;, 20, 20) + &quot; &quot; + TEXT(Status),
    TEXT(Status))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>