force-app/main/default/objects/Case_Reporting_Field__c/fields/Total_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Time__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Displays the Time Open Time in Days converting from MilliSeconds</description>
    <formula>(
    IF(
        ISBLANK(  Case_Last_Opened__c  ), 0, 
        (
            ( NOW() - Case_Last_Opened__c ) * 
            1000 * 60 * 60 * 24
        )
    )
    +  Total_Open_Time_MS__c 
) / (1000 * 60 * 60 * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>