force-app/main/default/objects/Case_Reporting_Field__c/fields/Total_Open_Time_MS__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Time_MS__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Records the Time Open in MilliSeconds</description>
    <label>Total Open Time MS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>